# catchdash

./: LICENSE  README.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: jobs.py  live.py  topics.py
backend/app/core/: settings.py
backend/app/domain/: models.py
backend/app/services/: __init__.py  live_social.py
backend/app/topics/: config_loader.py  registry.py  topic_live.py
backend/app/topics/facades/: __init__.py  arxiv.py  base.py  mlb.py  rss.py
backend/config/: topics.yaml.example
dev/: .env.example  .gitignore  README.md  compose.yaml
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/app/: api.ts  types.ts
frontend/src/components/: AudioPane.tsx  LiveItemModal.tsx  LiveItemRow.tsx  LivePane.tsx  LiveSourcePanel.tsx  SplitLayout.tsx
worker/: .gitignore  Dockerfile  README.md  pyproject.toml
worker/catchdash_worker/: config.py  main.py
worker/catchdash_worker/queue/: backend_api.py
worker/catchdash_worker/runners/: dispatcher.py
worker/catchdash_worker/tts/: extraction.py  llm.py  synth.py
