[project]
name = "catchdash-worker"
version = "0.1.0"
description = "Catchdash async worker"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
